fixed layout issues, changed sot selection to radio buttons, and removed autocomplete (not compat with >=v0.14.0

--- a/net.css
+++ b/net.css
@@ -1,11 +1,13 @@
 Screen {
     layout: horizontal;
     background: $panel;
+    overflow: hidden;
+    layers: base filters;
 }
 
-Dropdown { 
+/* Dropdown { 
     max-width: 50;
-}
+} */
 
 #input_container {
     layout: horizontal;
@@ -38,7 +40,7 @@ InventorySidebar {
 }
 
 InventorySidebar.hidden {
-    offset: -100% 10%;
+    offset: -100% 20%;
 }
 
 InventorySidebar Label {
@@ -65,7 +67,7 @@ InventorySidebar Vertical {
 }
 
 #sot_selector_container {
-    layout: horizontal;
+    layout: vertical;
     width: auto;
     height: auto;
 }
